Added variables and flip the cards on page load

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,6 +184,6 @@
 }
 
 .flipCard {
-    transform: rotateY(180deg);
     background: url(/assets/images/card-images/backside-card.jpg);
+    background-size: 100% 100%;
 }
