Added a flip card function and fixed a visual mistake on flipcard class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,3 +187,7 @@
     background: url(/assets/images/card-images/backside-card.jpg);
     background-size: 100% 100%;
 }
+
+.flipCard:hover{
+    transform: rotateY(180deg);
+}
