--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,12 @@
     text-align: center;
 }
 
+.game-info button:hover{
+    color: rgb(	251, 253, 138);
+    background-color: rgb( 8, 105, 114);
+    text-align: center;
+}
+
 /* -- Game Css -- */
 
 .game-container {
@@ -141,6 +147,32 @@
     border: 0.5px solid black;
     background-color: purple;
     border-radius: 5px;
+}
+
+.playingCard:hover {
+    border: none;
+    transform: scale(1.1);
+}
+
+.active-playingcard {
+    border: 0;
+    transform: none;
+    box-shadow: inset blue 0 0 0 4px;
+}
+
+.matched {
+    width: 100px;
+    height: 100px;
+    border: none;
+    margin: 4px;
+    box-shadow:inset green 0 0 0 4px;
+    background-color: purple;
+    border-radius: 5px;
+}
+
+.mismatch{
+    border: 0;
+    box-shadow: inset red 0 0 0 4px;
 }
 
 .one {
@@ -189,5 +221,7 @@
 }
 
 .flipCard:hover{
-    transform: rotateY(180deg);
+    cursor: pointer;
+    transform: scale(1.1);
+    box-shadow: inset yellow 0 0 0 4px;
 }
