--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,14 +26,12 @@
 
 #active-home{
     text-decoration: underline;
-    text-underline-offset: 5px;
     color: rgb(	251, 253, 138);
     font-weight: 600;
 }
 
 #active-play{
     text-decoration: underline;
-    text-underline-offset: 5px;
     color: rgb(	251, 253, 138);
     font-weight: 600;
 }
@@ -224,4 +222,32 @@
     cursor: pointer;
     transform: scale(1.1);
     box-shadow: inset yellow 0 0 0 4px;
+}
+
+/* -- Media Queries -- */
+
+@media only screen and (max-width: 600px){
+    #logo{
+        font-size: 25px;
+    }
+
+    .game-info{
+        font-size: medium;
+    }
+
+    .game-container {
+    width: 332px;
+    height: 332px;
+    background-color: rgb( 8, 105, 114);
+    margin: 7.5% auto;
+    border-radius: 5px;
+    }
+
+    .playingCard {
+    width: 75px;
+    height: 75px;
+    margin: 4px;
+    border: 0.5px solid black;
+    border-radius: 5px;
+    }
 }
